# MIDI-controlled-leslie

./: .gitignore  .gitmodules  README.md  library.properties  pin-overview.md  pin-overview.txt
software/: README.md  pyproject.toml
software/analysis/: README.md  analyze_belt_slip.py  analyze_frf.py  analyze_friction.py  closed_loop_bode.py  plot_clock_estimator.py  plot_position_controller.py  plot_slip_estimator.py  tune_pid_ms.py  udp_record.py
software/analysis/data/: README.md
software/analysis/data/beat_sync_test/drum_20260619_084810/: beat_sync_test.csv  meta.json
software/analysis/data/beat_sync_test/drum_20260619_084952/: beat_sync_test.csv  meta.json
software/analysis/data/belt_slip/drum_20260618_202354/: meta.json  slip_raw_samples.csv  (+1 more)
software/moteus-config/: README.md
software/moteus-config/backups/: drum-id1-20260616-134425.cfg
software/moteus-config/scripts/: _artifacts.py  align_encoders.py  analyze_enc1_error.py  apply_config.py  capture_ringdown.py  capture_run.py  capture_step.py  capture_velocity.py  capture_velocity_ramp.py  compare_compensation_runs.py  compare_configs.py  compare_to_backup.py  compensate_cogging_capture.py  compensate_encoder_velocity.py  compute_position_gains.py  compute_slip_filter.py  identify_frf.py  identify_friction.py  measure_belt_slip.py  measure_inertia.py  measure_ma600_bct_velocity.py  measure_stiction.py  measure_traction_limit.py  normalize_output_ratio.py  offset_ma600_to_zero.py  replot_friction.py  replot_kd.py  sweep_kd.py  test_beat_sync.py  test_feedforward.py  test_park.py  test_velocity_ramp.py
(+369 files in other folders)
