[project]
name = "leslie-software"
version = "0.1.0"
description = "Python tooling for the MIDI-controlled Leslie: moteus configuration and signal analysis."
requires-python = ">=3.13"
dependencies = [
    "control>=0.10.2",
    "matplotlib>=3.10.9",
    "moteus==0.3.101",
    "moteus-gui==0.3.99",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scipy>=1.17.1",
]
